--- a/packages/widget/src/website/index.css
+++ b/packages/widget/src/website/index.css
@@ -89,3 +89,12 @@ section {
   display: inline-block;
   margin-left: 12px;
 }
+
+blockquote {
+  font-size: 10px;
+  color: #898989;
+  padding-left: 6px;
+  margin: 10px 0 0 0;
+  border-left: 2px solid #cecece;
+
+}
