--- a/packages/widget/src/website/index.css
+++ b/packages/widget/src/website/index.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
+
 * {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  color: #333;
+  box-sizing: border-box;
 }
 
 html,
@@ -13,33 +15,65 @@ pre {
   margin: 0;
 }
 
-body {
-  padding: 20px;
+#app {
 }
 
-#app {
-  max-width: 600px;
+header {
+  background-color: #f5f5f5;
+  padding: 10px 20px;
+  position: sticky;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  top: 0;
+  z-index: 20;
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
 }
 
 header a {
   display: flex;
   align-items: center;
-  font-size: 22px;
+  font-size: 1.125rem;
   font-weight: 600;
 }
 
-header svg {
-  width: 36px;
-  height: 36px;
+header .logo svg {
+  width: 32px;
+  height: 32px;
+}
+
+header nav a {
+  width: 24px;
+  height: 24px;
+  display: block;
+  color: #232323;
+}
+
+header nav a:hover {
+  color: #000;
 }
 
 header span {
   display: inline-block;
-  padding-left: 12px;
-  margin-left: 12px;
-  border-left: 1px solid #ababab;
-  line-height: 1.1;
+  padding-left: 14px;
+  margin-left: 16px;
+  border-left: 1px solid #cdcdcd;
 }
+
+main {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, calc(50% - 20px));
+  position: relative;
+  grid-gap: 40px;
+  padding: 40px 20px;
+}
+
+main > div:nth-child(2) {
+  position: sticky;
+  top: 0;
+}
+
 
 label {
   display: block;
@@ -47,10 +81,6 @@ label {
 
 p {
   margin: 0;
-}
-
-header {
-  margin-bottom: 20px;
 }
 
 p,
@@ -73,7 +103,6 @@ select {
 
 label {
   padding: 4px 0;
-  color: #676767;
 }
 
 label > * + * {
@@ -82,13 +111,15 @@ label > * + * {
 
 code,
 code * {
-  font-size: 1rem;
+  font-size: 0.75rem;
   font-family: monospace !important;
   line-height: 1.4;
 }
 
 .label-text {
   margin: 0 0 4px 0;
+  color: #676767;
+  font-size: 0.75rem;
 }
 
 code {
@@ -98,10 +129,11 @@ code {
 
 h2 {
   font-size: 1.125rem;
+  font-weight: 600;
   margin: 0;
 }
 
-section {
+section:not(:first-child) {
   margin-top: 40px;
 }
 
@@ -122,7 +154,7 @@ section > * + * {
 }
 
 .radio > * + * {
-  margin-left: 6px;
+  margin-left: 10px;
 }
 
 .radio input {
@@ -132,16 +164,62 @@ section > * + * {
 blockquote {
   font-size: 1rem;
   color: #898989;
-  padding-left: 6px;
+  padding-left: 12px;
   margin: 10px 0 0 0;
   border-left: 2px solid #cecece;
 }
 
+.body {
+  line-height: 1.4;
+}
+
+.code-editor {
+  position: relative;
+}
+
+.code-editor > a {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 24px;
+  height: 24px;
+  padding: 2px;
+  display: none;
+  color: #898989;
+  border-radius: 4px;
+}
+
+.code-editor > a:hover {
+  color: #000;
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
+.code-editor:hover > a {
+  display: block;
+}
+
 /* Carousel example */
+
+.slides-container {
+  position: relative;
+}
+
+.slides-container::after {
+  content: ' ';
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 60px;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
+}
 
 .slides {
   display: flex;
+  position: relative;
   overflow-x: auto;
+  padding-right: 20px;
+  padding-bottom: 10px;
   scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
   -webkit-overflow-scrolling: touch;
@@ -164,12 +242,12 @@ blockquote {
 .slide {
   scroll-snap-align: start;
   flex-shrink: 0;
-  width: 276px;
+  width: 226px;
   height: 240px;
   margin-right: 10px;
   border-radius: 10px;
   padding: 10px;
-  background: #eee;
+  border: 1px solid #eee;
   transform-origin: center center;
   transform: scale(1);
   transition: transform 0.5s;
@@ -178,6 +256,7 @@ blockquote {
 
 .slide-title {
   font-size: 1rem;
+  font-weight: 600;
 }
 
 .slide-description {
