--- a/packages/widget/src/website/index.css
+++ b/packages/widget/src/website/index.css
@@ -19,7 +19,7 @@ pre {
 }
 
 header {
-  background-color: #f5f5f5;
+  background-color: #000;
   padding: 10px 20px;
   position: sticky;
   display: flex;
@@ -28,6 +28,7 @@ header {
   top: 0;
   z-index: 20;
   box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
+  color: white;
 }
 
 header a {
@@ -46,11 +47,11 @@ header nav a {
   width: 24px;
   height: 24px;
   display: block;
-  color: #232323;
+  color: #cecece;
 }
 
 header nav a:hover {
-  color: #000;
+  color: #fff;
 }
 
 header span {
@@ -241,6 +242,7 @@ blockquote {
 
 .slide {
   scroll-snap-align: start;
+  cursor: pointer;
   flex-shrink: 0;
   width: 226px;
   height: 240px;
@@ -254,16 +256,114 @@ blockquote {
   position: relative;
 }
 
+.slide:hover,
+.slide--active
+{
+  border-color: #000;
+}
+
+.slide-image {
+  width: 100%;
+  height: 100px;
+  background-size: cover;
+  background-position: 50% 50%;
+}
+
 .slide-title {
   font-size: 1rem;
   font-weight: 600;
 }
 
 .slide-description {
-  font-size: 1rem;
+  font-size: 0.875rem;
   color: #676767;
+}
+
+.slide img {
+  width: 100%;
 }
 
 .slide > * + * {
   margin-top: 10px;
+}
+
+.popover-container::before {
+  content: ' ';
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  backdrop-filter: blur(6px);
+}
+
+.popover {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 50%;
+  bottom: 0;
+  background: white;
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.3);
+}
+
+.popover-title {
+  padding: 10px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.popover-content {
+  padding: 20px;
+}
+
+.popover-content > * + * {
+  margin-top: 20px;
+}
+
+.popover img {
+  width: 100%;
+}
+
+.popover-close {
+  width: 28px;
+  height: 28px;
+  padding: 2px;
+  border-radius: 4px;
+  padding: 0;
+  display: block;
+  border: none;
+  background: none;
+  color: #000;
+  cursor: pointer;
+}
+
+.popover-close:hover {
+  color: #232323;
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
+.cta-button {
+  width: 100%;
+  padding: 12px 20px;
+  font-size: 1rem;
+  display: block;
+  letter-spacing: 0.10rem;
+  border: none;
+  color: white;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-weight: 600;
+  background-color: #000;
+}
+
+.cta-button:hover {
+  background-color: #232323;
+}
+
+#portal {
+  position: relative;
+  z-index: 1000;
 }
