--- a/packages/widget/src/website/index.css
+++ b/packages/widget/src/website/index.css
@@ -19,7 +19,7 @@ pre {
 }
 
 header {
-  background-color: #000;
+  background-color: var(--primaryColor);
   padding: 10px 20px;
   position: sticky;
   display: flex;
@@ -341,7 +341,7 @@ blockquote {
 }
 
 .popover-close:hover {
-  color: #232323;
+  color: var(--primaryColorLighter);
   background-color: rgba(0, 0, 0, 0.05);
 }
 
@@ -356,14 +356,90 @@ blockquote {
   cursor: pointer;
   text-transform: uppercase;
   font-weight: 600;
-  background-color: #000;
+  background-color: var(--primaryColor);
 }
 
 .cta-button:hover {
-  background-color: #232323;
+  background-color: var(--primaryColorLighter);
 }
 
 #portal {
   position: relative;
   z-index: 1000;
+}
+
+/* Chat form */
+
+.chat-form {
+  padding: 10px;
+  border-radius: 6px;
+  background: #efefef;
+}
+
+.chat-form > * + * {
+  margin-top: 10px;
+}
+
+.chat-form input,
+.chat-form textarea {
+  display: block;
+  font-size: 0.75rem;
+  width: 100%;
+  padding: 6px;
+  background: #fff;
+  border: 1px solid #dedede;
+  border-radius: 6px;
+}
+
+.chat-form button {
+  display: block;
+  width: 100%;
+  background-color: var(--primaryColor);
+  padding: 8px 12px;
+  border-radius: 6px;
+  border: none;
+  color: #fff;
+  font-size: 0.75rem;
+  text-transform: uppercase;
+  font-weight: 600;
+  cursor: pointer;
+  letter-spacing: 0.05rem;
+}
+
+.chat-form button:hover {
+  background-color: var(--primaryColorLighter);
+}
+
+/* Chat consent */
+
+.chat-consent {
+  border-radius: 6px;
+  padding: 6px;
+  color: #676767;
+  text-align: center;
+}
+
+.chat-consent p,
+.chat-consent a,
+.chat-consent button {
+  font-size: 0.625rem;
+}
+
+.chat-consent a {
+  text-decoration: underline;
+}
+
+.chat-consent p {
+  margin-bottom: 6px;
+}
+
+.chat-consent button {
+  border: none;
+  background: none;
+  color: var(--primaryColor);
+  cursor: pointer;
+}
+
+.chat-consent button:hover {
+  color: var(--primaryColorLighter);
 }
