--- a/packages/website/src/custom-components/Carousel.css
+++ b/packages/website/src/custom-components/Carousel.css
@@ -1,5 +1,6 @@
 .chat-carousel-container {
   position: relative;
+  padding: 15px;
 }
 
 .chat-carousel-container::after {
@@ -20,7 +21,7 @@
   display: flex;
   position: relative;
   overflow-x: auto;
-  padding-right: 20px;
+  padding-right: 40px;
   padding-bottom: 10px;
   scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
@@ -50,7 +51,7 @@
   margin-right: 10px;
   border-radius: 10px;
   padding: 10px;
-  border: 1px solid #eee;
+  background-color: rgb(243, 244, 246);
   transform-origin: center center;
   transform: scale(1);
   transition: transform 0.5s;
